--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -5,4 +5,7 @@
             <a mat-list-item><i class="material-icons">storefront</i>Produtos</a>
         </mat-nav-list>
     </mat-sidenav>
+    <mat-sidenav-content class="content">
+        <app-home></app-home>
+    </mat-sidenav-content>
 </mat-sidenav-container>
