--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido com <i class="material-icons red v-middle">favorite</i> por <strong>Codefirst</strong>
+        Desenvolvido com <i class="material-icons v-middle" appRed>favorite</i> por <strong>Codefirst</strong>
     </span>
 </mat-toolbar>
