--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -18,6 +18,17 @@
       <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
     </ng-container>
 
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <a routerLink="">
+          <i class="material-icons edit" matTooltip="Editar">edit</i>
+          <i class="material-icons delete" matTooltip="Excluir">delete</i>
+        </a>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
