--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -22,8 +22,11 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-        <a routerLink="">
+        <a routerLink="/products/update/{{row.id}}">
           <i class="material-icons edit" matTooltip="Editar">edit</i>
+
+        </a>
+        <a routerLink="">
           <i class="material-icons delete" matTooltip="Excluir">delete</i>
         </a>
       </td>
