--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -35,4 +35,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white;">
+    <mat-progress-spinner class="spinner" color="primary" mode="indeterminate" diameter="30">
+    </mat-progress-spinner>
+  </div>
 </div>
