--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -26,7 +26,7 @@
           <i class="material-icons edit" matTooltip="Editar">edit</i>
 
         </a>
-        <a routerLink="">
+        <a routerLink="/products/delete/{{row.id}}">
           <i class="material-icons delete" matTooltip="Excluir">delete</i>
         </a>
       </td>
