--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .red {
-    color: rgb(227, 94, 107);
+  color: rgb(227, 94, 107);
 }
 
 .v-middle {
-    vertical-align: middle;
+  vertical-align: middle;
+}
+
+.msg-success {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.msg-error {
+  background-color: #dc3545;
+  color: #fff;
 }
