--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,17 +1,24 @@
 <mat-card>
   <mat-card-title>Novo Produto</mat-card-title>
 
-  <form>
+  touched : {{name.touched}}
+  invalid : {{name.invalid}}
+  pristine : {{name.pristine}}
+  value : {{name.value}}
+
+  <form [formGroup]="myForm">
     <mat-form-field>
-      <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
+      <input matInput formControlName="name" placeholder="Name">
+      <mat-error *ngIf="name.invalid && name.pristine">Deve ser preenchido</mat-error>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Preço(R$)" [(ngModel)]="product.price" name="price">
+      <input matInput placeholder="Preço(R$)" formControlName="price" name="price">
+      <mat-error *ngIf="price.invalid && price.touched">Deve ser > 1</mat-error>
     </mat-form-field>
   </form>
 
-  <button mat-raised-button (click)="createProduct()" color="primary">
+  <button mat-raised-button [disabled]="myForm.invalid" (click)="createProduct()" color="primary">
     Salvar Produto
   </button>
 
